--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.0+1
+  cloud_firestore: ^0.12.10+2
+  barcode_scan: ^1.0.0
 
 dev_dependencies:
   flutter_test:
